# Python-Discrete-Optimizer

./: .pre-commit-config.yaml  README.md  convert.py  convert_vta_txt_traces_to_pickle.py  descrete_optimizer.py  discrete_optimizer.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/discrete_optimizer/: __init__.py  discrete_optimizer.py
tests/: test_discrete_optimizer.py
