# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discrete_optimizer"
version = "0.1.0"
description = "Discrete Optimizer for Python"
readme = "README.md"
authors = [{ name = "Konstantin (k0nze) Lübeck", email = "konstantin.luebeck@uni-tuebingen.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
	"Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["discrete", "optimization"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pre-commit", "bumpver"]

[project.urls]
Homepage = "https://github.com/k0nze/discrete_optimizer"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"',]
"src/discrete_optimizer/__init__.py" = ['__version__ = "{version}"']
